--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -2,7 +2,7 @@ name: Docker CI Pipeline
 run-name: ${{ github.actor }} is running out Docker CI Pipeline 🚀
 on: [push]
 jobs:
-  hello-world-job:
+  docker-build-push:
     runs-on: ubuntu-latest
     steps:
        - name: Clone the code
@@ -16,3 +16,26 @@ jobs:
            password: ${{ secrets.DOCKERHUB_TOKEN }}
        - name: Push the image
          run: docker push ${{ vars.DOCKERHUB_USERNAME }}/helloworld-demo-python:v1
+
+
+  k8s-implementation:
+    needs: docker-build-push
+    runs-on: ubuntu-latest
+    steps:
+       - name: Clone the code
+         uses: actions/checkout@v6  
+ 
+       - name: Start minikube
+         uses: medyagh/setup-minikube@latest
+       - name: Try the cluster!
+         run: kubectl get pods -A
+ 
+       - name: Create Deployment and Service
+         run: |
+            kubectl apply -f k8s/deployment.yaml
+            kubectl apply -f k8s/service.yaml
+            kubectl wait --for=condition=ready pod -l app=hello-world-python
+       - name: View Deployment and Service
+         run: |
+            kubectl get deployments
+            kubectl get service
