--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -34,7 +34,7 @@ jobs:
          run: |
             kubectl apply -f k8s/deployment.yaml
             kubectl apply -f k8s/service.yaml
-            kubectl wait --for=condition=ready pod -l app=hello-world-python
+            kubectl wait --for=condition=ready pod -l app=helloworld-demo-python
        - name: View Deployment and Service
          run: |
             kubectl get deployments
